# lahzam

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: lahzamConfig.cmake.in
generate/: structured_bindings.py
include/lahzam/: generated.hpp  hash.hpp  lahzam.hpp
include/lahzam/addons/: nlohmann_json.hpp
tests/: CMakeLists.txt  hash.cpp  main.cpp  nlohmann_json.cpp
tests/benchmark/: benchmark_boost_get.cpp  benchmark_boost_get_name.cpp  benchmark_glaze_get.cpp  benchmark_glaze_get_name.cpp  benchmark_lahzam_get.cpp  benchmark_lahzam_get_name.cpp
